--- a/trunk/ExpressSoft/Main.master
+++ b/trunk/ExpressSoft/Main.master
@@ -3,7 +3,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head id="Head1" runat="server">
-   <title>PHẦN MỀM QUẢN LÝ CHUYỂN PHÁT NHANH DOVE EXPRESS</title>
+   <title>PHẦN MỀM QUẢN LÝ CHUYỂN PHÁT NHANH EXPRESS SOFT</title>
    <link href="css/StyleSheet.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -107,10 +107,7 @@
 <div class ="clearfix"></div>
 <div id ="divfooterbackend">
    <a class="a_footter" href="http://dovevn.com/">
-                 ©Copyright 2012-<%= System.DateTime.Now.Year %> Chuyển phát nhanh Bồ Câu - Dove Express.</a>
-               <br /> Hà Nội: 33 ngách 15 ngõ 167 Tây Sơn, Đống Đa - ÐT: 04.2242.4232 - Fax: 04.3533.5153 - Email: hn@dovevn.com  
-               <br /> TP.HCM: 49/3 Hậu Giang, Tân Bình - ÐT: 08. 2218.0607 - Fax: 08. 3948.7154 - Email: hcm@dovevn.com
-               <br /> Website: www.dovevn.com 
+                 ©Copyright 2012-<%= System.DateTime.Now.Year %> Chuyển phát nhanh - EXPRESS SOFT.</a>
 </div>
 </div> 
     </form>
