--- a/trunk/ExpressSoft/Popup.master
+++ b/trunk/ExpressSoft/Popup.master
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
     <link href="css/StyleSheet.css" rel="stylesheet" type="text/css" />
-    <title>PHẦN MỀM QUẢN LÝ CHUYỂN PHÁT NHANH DOVE EXPRESS</title>
+    <title>PHẦN MỀM QUẢN LÝ CHUYỂN PHÁT NHANH EXPRESS SOFT</title>
 </head>
 <body>
     <script type="text/javascript">
