--- a/ExpressSoft/tinhcuoctrongnuoc/tinhcuoctrongnuoc.master
+++ b/ExpressSoft/tinhcuoctrongnuoc/tinhcuoctrongnuoc.master
@@ -4,7 +4,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head id="Head1" runat="server">
-    <title>CHUYỂN PHÁT NHANH DOVE EXPRESS</title>
+    <title>CHUYỂN PHÁT NHANH EXPRESS SOFT</title>
     <style type="text/css">
         body
         {
@@ -225,23 +225,17 @@
             </asp:ContentPlaceHolder>
         </div>
         <div class="footer1">
-            Giá cước này được tính theo bảng giá công bố của Dove Express, tuy nhiên sẽ cố một
+            Giá cước này được tính theo bảng giá công bố của EXPRESS SOFT, tuy nhiên sẽ cố một
             số<br />
             lưu ý cho Quý khách khi gửi như hàng hoá nhẹ, hàng cồng kềnh, hàng có tính chất
             đặc<br />
-            biệt...cần phải tư vấn thêm. Vui lòng gọi tổng đài Hà Nội hoặc TP. HCM để được tư
-            vấn
+            biệt...cần phải tư vấn thêm. Vui lòng gọi tổng đài để được tư vấn
             <br />
             <br />
         </div>
         <div class="footer2">
-            <span style="font-weight: bold">Chuyển phát nhanh Bồ Câu - Dove Express.</span>
+            <span style="font-weight: bold">Chuyển phát nhanh - EXPRESS SOFT.</span>
             <br />
-            Hà Nội: 33 ngách 15 ngõ 167 Tây Sơn, Đống Đa - ÐT: 04.3533.5153
-            <br />
-            TP.HCM: 108/6 Cộng Hoà, P4, Tân Bình - ÐT: 08.62.66.44.55
-            <br />
-            <span style="font-weight: bold">Website: www.dovevn.com</span>
         </div>
     </div>
     </form>
